Add few more journals, typos

--- a/bbt.bib
+++ b/bbt.bib
@@ -5,7 +5,7 @@
 
 % NOTE: keywords should be added in lowercase
 
-% Publishers (inolving more than one word)
+% Publishers (involving more than one word)
 @string{acm      = "{Association for Computing Machinery}"}
 @string{cup      = "{Cambridge University Press}"}
 @string{dagstuhl = "{Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik}"}
@@ -16,7 +16,9 @@
 @string{oup      = "{Oxford University Press}"}
 @string{sprintl  = "{Springer International Publishing}"}
 
-% Journals (inolving more than one word), at least two entries
+% Journals (involving more than one word), at least two entries
+@string{entcs  = "Electronic Notes in Theoretical Computer Science"}
+@string{eptcs  = "Electronic Proceedings in Theoretical Computer Science"}
 @string{jar    = "Journal of Automated Reasoning"}
 @string{mscs   = "Mathematical Structures in Computer Science"}
 @string{njp    = "New Journal of Physics"}
@@ -29,14 +31,22 @@
 @string{cj     = "The Computer Journal"}
 @string{epjd   = "European Physical Journal D: Atomic, Molecular, Optical and Plasma Physics"}
 @string{jacm   = "Journal of the ACM"}
+@string{jal    = "Journal of Applied Logic"}
+@string{jfp    = "Journal of Functional Programming"}
+@string{jlc    = "Journal of Logic and Computation"}
+@string{jpaa   = "Journal of Pure and Applied Algebra"}
+@string{jsc    = "Journal of Symbolic Computation"}
+@string{jsl    = "The Journal of Symbolic Logic"}
 @string{lmcs   = "Logical Methods in Computer Science"}
 @string{np     = "Nature Physics"}
 @string{nrp    = "Nature Reviews Physics"}
 @string{pc     = "Parallel Computing"}
 @string{qst    = "Quantum Science and Technology"}
+@string{rtac   = "Reprints in Theory and Applications of Categories"}
 @string{scp    = "Science of Computer Programming"}
-@string{tcl    = "ACM Transactions on Computational Logic"}
+@string{tac    = "Theory and Applications of Categories"}
 @string{tcs    = "Theoretical Computer Science"}
+@string{tocl   = "ACM Transactions on Computational Logic"}
 @string{toplas = "ACM Transactions on Programming Languages and Systems"}
 
 % bibsource
@@ -125,7 +135,7 @@
   editor    = {Selinger, Peter and Chiribella, Giulio},
   publisher = opa,
   address   = {Waterloo, NSW, Australia},
-  series    = {Electronic Proceedings in Theoretical Computer Science},
+  series    = eptcs,
   volume    = {287},
   pages     = {1--21},
   doi       = {10.4204/EPTCS.287.1},
@@ -211,7 +221,7 @@
   editor    = {Heunen, Chris and Selinger, Peter and Vicary, Jamie},
   publisher = opa,
   address   = {Waterloo, NSW, Australia},
-  series    = {Electronic Proceedings in Theoretical Computer Science},
+  series    = eptcs,
   volume    = {195},
   pages     = {33--42},
   doi       = {10.4204/EPTCS.195.3},
@@ -280,7 +290,7 @@
   editor    = {Heunen, Chris and Selinger, Peter and Vicary, Jamie},
   publisher = opa,
   address   = {Waterloo, NSW, Australia},
-  series    = {Electronic Proceedings in Theoretical Computer Science},
+  series    = eptcs,
   volume    = {195},
   pages     = {71--83},
   doi       = {10.4204/EPTCS.195.6},
@@ -685,7 +695,7 @@
   year          = {2011},
   month         = feb,
   booktitle     = {Proceedings of the Joint 5th International Workshop on Quantum Physics and Logic and 4th Workshop on Developments in Computational Models (QPL/DCM 2008)},
-  series        = {Electronic Notes in Theoretical Computer Science},
+  series        = entcs,
   volume        = {270},
   pages         = {165--174},
   doi           = {10.1016/j.entcs.2011.01.015},
@@ -894,7 +904,7 @@
   editor    = {Heunen, Chris and Selinger, Peter and Vicary, Jamie},
   publisher = opa,
   address   = {Waterloo, NSW, Australia},
-  series    = {Electronic Proceedings in Theoretical Computer Science},
+  series    = eptcs,
   volume    = {195},
   pages     = {262--272},
   doi       = {10.4204/EPTCS.195.19},
@@ -930,7 +940,7 @@
   editor    = {Selinger, Peter and Chiribella, Giulio},
   publisher = opa,
   address   = {Waterloo, NSW, Australia},
-  series    = {Electronic Proceedings in Theoretical Computer Science},
+  series    = eptcs,
   volume    = {287},
   pages     = {213--223},
   doi       = {10.4204/EPTCS.287.12},
@@ -1066,7 +1076,7 @@
   editor    = {Valiron, Beno{\^i}t and Mansfield, Shane and Arrighi, Pablo and Panangaden, Prakash},
   publisher = opa,
   address   = {Waterloo, NSW, Australia},
-  series    = {Electronic Proceedings in Theoretical Computer Science},
+  series    = eptcs,
   volume    = {340},
   pages     = {174--187},
   doi       = {10.4204/EPTCS.340.9},
@@ -1367,7 +1377,7 @@
   booktitle = {Proceedings Joint International Workshop on Linearity \& Trends in Linear Logic and Applications (Linearity-TLLA '18), Oxford, {{UK}}, 7--8 July 2018},
   editor    = {Ehrhard, Thomas and Fern{\'a}ndez, Maribel and de Paiva, Valeria and {Tortora de Falco}, Lorenzo},
   publisher = opa,
-  series    = {Electronic Proceedings in Theoretical Computer Science},
+  series    = eptcs,
   volume    = {292},
   pages     = {133--147},
   doi       = {10.4204/EPTCS.292.8},
@@ -1534,7 +1544,7 @@
   editor    = {Coecke, Bob and Kissinger, Aleks},
   publisher = opa,
   address   = {Waterloo, NSW, Australia},
-  series    = {Electronic Proceedings in Theoretical Computer Science},
+  series    = eptcs,
   volume    = {266},
   pages     = {119--132},
   doi       = {10.4204/EPTCS.266.8},
@@ -1584,7 +1594,7 @@
   editor     = {Selinger, Peter and Chiribella, Giulio},
   publisher  = opa,
   address    = {Waterloo, NSW, Australia},
-  series     = {Electronic Proceedings in Theoretical Computer Science},
+  series     = eptcs,
   volume     = {287},
   pages      = {299--312},
   doi        = {10.4204/EPTCS.287.17},
@@ -1620,7 +1630,7 @@
   editor    = {Valiron, Beno{\^i}t and Mansfield, Shane and Arrighi, Pablo and Panangaden, Prakash},
   publisher = opa,
   address   = {Waterloo, NSW, Australia},
-  series    = {Electronic Proceedings in Theoretical Computer Science},
+  series    = eptcs,
   volume    = {340},
   pages     = {279--290},
   doi       = {10.4204/EPTCS.340.14},
@@ -1637,7 +1647,7 @@
   month     = apr,
   booktitle = {The {{Thirty}}-Third {{Conference}} on the {{Mathematical Foundations}} of {{Programming Semantics}} ({{MFPS XXXIII}})},
   publisher = {Elsevier},
-  series    = {Electronic Notes in Theoretical Computer Science},
+  series    = entcs,
   volume    = {336},
   pages     = {257--279},
   doi       = {10.1016/j.entcs.2018.03.027},
@@ -1673,7 +1683,7 @@
   editor    = {Coecke, Bob and Kissinger, Aleks},
   publisher = opa,
   address   = {Waterloo, NSW, Australia},
-  series    = {Electronic Proceedings in Theoretical Computer Science},
+  series    = eptcs,
   volume    = {266},
   pages     = {164--178},
   doi       = {10.4204/EPTCS.266.11},
@@ -1862,7 +1872,7 @@
   editor    = {Valiron, Beno{\^i}t and Mansfield, Shane and Arrighi, Pablo and Panangaden, Prakash},
   publisher = opa,
   address   = {Waterloo, NSW, Australia},
-  series    = {Electronic Proceedings in Theoretical Computer Science},
+  series    = eptcs,
   volume    = {340},
   pages     = {291--302},
   doi       = {10.4204/EPTCS.340.15},
