Update sort order to include biblatex-specific fields

--- a/bbt.bib
+++ b/bbt.bib
@@ -1,7 +1,7 @@
 % Encoding: UTF-8
 
 % Field sort order
-% title shorttitle author year month day journal booktitle editor location on publisher school institution address series volume number eid pages numpages crossref doi archiveprefix eprint howpublished url urldate abstract keywords copyright category note metadata timestamp webnote bibsource
+% title,shorttitle,author,year,month,day,date,journal,journaltitle,booktitle,editor,on,publisher,school,institution,address,location,series,volume,number,eid,pages,numpages,crossref,doi,archiveprefix,eprinttype,eprint,howpublished,url,urldate,abstract,keywords,copyright,category,note,metadata,timestamp,webnote,bibsource
 
 % NOTE: keywords should be added in lowercase
 
