--- a/bbt.bib
+++ b/bbt.bib
@@ -976,6 +976,7 @@
   month       = jun,
   institution = {{Princeton University}},
   url         = {https://www.cs.princeton.edu/research/techreps/TR-934-12},
+  number      = {TR-934-12},
   abstract    = {Quantum computing is of significant research interest because of its potential to radically alter the performance and asymptotic complexity of certain computations. Over the years, physicists have explored possibilities for how to implement quantum bits and logic devices in hardware. At a higher level, mathematicians and algorithmicists have explored how to express computational problems from diverse fields---such as cryptography, chemical systems simulation, and database search---in terms of mathematical equations potentially implementable in quantum hardware.
 
                  For quantum computing to become potentially viable however, research must also make inroads regarding the implementation, compilation, and architectural issues that lie between high-level mathematical algorithm expressions and low-level physical implementations. In particular, we need tools and analysis techniques that can---for a given algorithm and potential physical implementation technology---answer questions like: how much would it cost (i.e., how much resource in terms of qubits, gates, time are required?) to implement the algorithm in this technology? What is its performance potential? Is it scalable? Are there more algorithms that offer such speedups over classical computers?
@@ -1519,7 +1520,7 @@
   bibsource = qplbib
 }
 
-@techreport{Rand2016,
+@misc{Rand2016,
   title         = {Verification {{Logics}} for {{Quantum Programs}}},
   author        = {Rand, Robert},
   year          = {2016},
