--- a/bbt.bib
+++ b/bbt.bib
@@ -2308,8 +2308,8 @@
 }
 
 @article{Yuan2022,
-  author    = {Yuan, Charles and McNally, Christopher and Carbin, Michael},
   title     = {Twist: Sound Reasoning for Purity and Entanglement in Quantum Programs},
+  author    = {Yuan, Charles and McNally, Christopher and Carbin, Michael},
   year      = {2022},
   month     = jan,
   journal   = pacmpl,
@@ -2370,4 +2370,20 @@
   abstract      = {We propose a model of the substructural logic of Bunched Implications (BI) that is suitable for reasoning about quantum states. In our model, the separating conjunction of BI describes separable quantum states. We develop a program logic where pre- and post-conditions are BI formulas describing quantum states---the program logic can be seen as a counterpart of separation logic for imperative quantum programs. We exercise the logic for proving the security of quantum one-time pad and secret sharing, and we show how the program logic can be used to discover a flaw in Google Cirq's tutorial on the Variational Quantum Algorithm (VQA).},
   keywords      = {formal logic, quantum computing, substructural logic, separating conjunction, separable quantum states, program logic, imperative quantum programs, variational quantum algorithm, quantum interpretation, bunched logic, separation logic},
   bibsource     = qplbib
+}
+
+@article{Zorzi2019,
+  title     = {Quantum Calculi---From Theory to Language Design},
+  author    = {Zorzi, Margherita},
+  year      = {2019},
+  month     = dec,
+  journal   = {Applied Sciences},
+  volume    = {9},
+  number    = {24},
+  eid       = {5472},
+  pages     = {5472},
+  doi       = {10.3390/app9245472},
+  abstract  = {In the last 20 years, several approaches to quantum programming have been introduced. In this survey, we focus on the QRAM (Quantum Random Access Machine) architectural model. We explore the twofold perspective (theoretical and concrete) of the approach and we list the main problems one has to face in quantum language design. Moreover, we propose an overview of some interesting languages and open-source platforms for quantum programming currently available. We also provide the higher-order encoding in the functional languages qPCF and IQu of the well known Deutsch-Jozsa and Simon's algorithms.},
+  keywords  = {quantum language design, quantum computing, programming theory},
+  bibsource = qplbib
 }
