--- a/bbt.bib
+++ b/bbt.bib
@@ -1535,7 +1535,7 @@
   year          = {2022},
   month         = jun,
   booktitle     = {Proceedings of the 43rd ACM SIGPLAN International Conference on Programming Language Design and Implementation},
-  publisher     = {acm},
+  publisher     = acm,
   address       = {New York, NY, USA},
   series        = {{{PLDI}} '22},
   pages         = {},
@@ -2068,7 +2068,7 @@
   year          = {2022},
   month         = jun,
   booktitle     = {Proceedings of the 43rd ACM SIGPLAN International Conference on Programming Language Design and Implementation},
-  publisher     = {acm},
+  publisher     = acm,
   address       = {New York, NY, USA},
   series        = {{{PLDI}} '22},
   pages         = {},
@@ -2240,7 +2240,7 @@
   year          = {2022},
   month         = jun,
   booktitle     = {Proceedings of the 43rd ACM SIGPLAN International Conference on Programming Language Design and Implementation},
-  publisher     = {acm},
+  publisher     = acm,
   address       = {New York, NY, USA},
   series        = {{{PLDI}} '22},
   pages         = {},
