--- a/bbt.bib
+++ b/bbt.bib
@@ -1078,7 +1078,7 @@
 
 @techreport{Knill1996,
   title       = {Conventions for Quantum Pseudocode},
-  author      = {Knill, Emmanuel},
+  author      = {Knill, Emanuel},
   year        = {1996},
   month       = jun,
   institution = {{Los Alamos National Laboratory}},
