--- a/qpv.bib
+++ b/qpv.bib
@@ -1,5 +1,5 @@
 @techreport{Knill1996,
-  author      = {Knill, Emmanuel},
+  author      = {Knill, Emanuel},
   title       = {Conventions for Quantum Pseudocode},
   year        = {1996},
   month       = jun,
