--- a/bbt.bib
+++ b/bbt.bib
@@ -176,6 +176,25 @@
   bibsource     = qplbib
 }
 
+@article{Amy2020,
+  title      = {$\less$tt$\greater$staq$\less$/tt$\greater${\textemdash}A full-stack quantum processing toolkit},
+  author     = {Amy, Matthew and Gheorghiu, Vlad},
+  year       = {2020},
+  month      = jun,
+  journal    = {Quantum Science and Technology},
+  publisher  = {{IOP} Publishing},
+  volume     = {5},
+  number     = {3},
+  eid        = {034016},
+  pages      = {034016},
+  numpages   = {21},
+  doi        = {10.1088/2058-9565/ab9359},
+  eprinttype = {arXiv},
+  eprint     = {1912.06070},
+  url        = {https://github.com/softwareQinc/staq},
+  abstract   = {We describe staq, a full-stack quantum processing toolkit written in standard C++. staq is a quantum compiler toolkit, comprising of tools that range from quantum optimizers and translators to physical mappers for quantum devices with restricted connectives. The design of staq is inspired from the UNIX philosophy of `less is more', i.e. staq achieves complex functionality via combining (piping) small tools, each of which performs a single task using the most advanced current state-of-the-art methods. We also provide a set of illustrative benchmarks.}
+}
+
 @article{ArdeshirLarijani2018,
   title     = {Automated Equivalence Checking of Concurrent Quantum Systems},
   author    = {{Ardeshir-Larijani}, Ebrahim and Gay, Simon J. and Nagarajan, Rajagopal},
