--- a/bbt.bib
+++ b/bbt.bib
@@ -23,6 +23,7 @@
 @string{mscs   = "Mathematical Structures in Computer Science"}
 @string{njp    = "New Journal of Physics"}
 @string{pacmpl = "Proceedings of the ACM on Programming Languages"}
+@string{qst    = "Quantum Science and Technology"}
 @string{tqc    = "ACM Transactions on Quantum Computing"}
 
 % Journals, only one entry, yet to be replaced
@@ -41,7 +42,6 @@
 @string{np     = "Nature Physics"}
 @string{nrp    = "Nature Reviews Physics"}
 @string{pc     = "Parallel Computing"}
-@string{qst    = "Quantum Science and Technology"}
 @string{rtac   = "Reprints in Theory and Applications of Categories"}
 @string{scp    = "Science of Computer Programming"}
 @string{tac    = "Theory and Applications of Categories"}
@@ -177,22 +177,23 @@
 }
 
 @article{Amy2020,
-  title      = {$\less$tt$\greater$staq$\less$/tt$\greater${\textemdash}A full-stack quantum processing toolkit},
-  author     = {Amy, Matthew and Gheorghiu, Vlad},
-  year       = {2020},
-  month      = jun,
-  journal    = {Quantum Science and Technology},
-  publisher  = {{IOP} Publishing},
-  volume     = {5},
-  number     = {3},
-  eid        = {034016},
-  pages      = {034016},
-  numpages   = {21},
-  doi        = {10.1088/2058-9565/ab9359},
-  eprinttype = {arXiv},
-  eprint     = {1912.06070},
-  url        = {https://github.com/softwareQinc/staq},
-  abstract   = {We describe staq, a full-stack quantum processing toolkit written in standard C++. staq is a quantum compiler toolkit, comprising of tools that range from quantum optimizers and translators to physical mappers for quantum devices with restricted connectives. The design of staq is inspired from the UNIX philosophy of `less is more', i.e. staq achieves complex functionality via combining (piping) small tools, each of which performs a single task using the most advanced current state-of-the-art methods. We also provide a set of illustrative benchmarks.}
+  title         = {staq -- A full-stack quantum processing toolkit},
+  author        = {Amy, Matthew and Gheorghiu, Vlad},
+  year          = {2020},
+  month         = jun,
+  journal       = qst,
+  publisher     = iop,
+  volume        = {5},
+  number        = {3},
+  eid           = {034016},
+  pages         = {034016},
+  numpages      = {21},
+  doi           = {10.1088/2058-9565/ab9359},
+  archiveprefix = {arXiv},
+  eprint        = {1912.06070},
+  url           = {https://github.com/softwareQinc/staq},
+  abstract      = {We describe staq, a full-stack quantum processing toolkit written in standard C++. staq is a quantum compiler toolkit, comprising of tools that range from quantum optimizers and translators to physical mappers for quantum devices with restricted connectives. The design of staq is inspired from the UNIX philosophy of `less is more', i.e. staq achieves complex functionality via combining (piping) small tools, each of which performs a single task using the most advanced current state-of-the-art methods. We also provide a set of illustrative benchmarks.},
+  bibsource     = qplbib
 }
 
 @article{ArdeshirLarijani2018,
@@ -744,6 +745,25 @@
   address   = {Cambridge},
   doi       = {10.1017/CBO9781139193313},
   abstract  = {The study of computational processes based on the laws of quantum mechanics has led to the discovery of new algorithms, cryptographic techniques, and communication primitives. This book explores quantum computation from the perspective of the branch of theoretical computer science known as semantics, as an alternative to the more well-known studies of algorithmics, complexity theory, and information theory. It collects chapters from leading researchers in the field, discussing the theory of quantum programming languages, logics and tools for reasoning about quantum systems, and novel approaches to the foundations of quantum mechanics. This book is suitable for graduate students and researchers in quantum information and computation, as well as those in semantics, who want to learn about a new field arising from the application of semantic techniques to quantum information and computation.},
+  bibsource = qplbib
+}
+
+@article{Gheorghiu2018,
+  title     = {Quantum++: A modern C++ quantum computing library},
+  author    = {Gheorghiu, Vlad},
+  year      = {2018},
+  month     = dec,
+  journal   = {{PLoS ONE}},
+  publisher = {{Public Library of Science}},
+  volume    = {13},
+  number    = {12},
+  eid       = {e0208073},
+  pages     = {e0208073},
+  numpages  = {27},
+  doi       = {10.1371/journal.pone.0208073},
+  url       = {https://github.com/softwareQinc/qpp},
+  abstract  = {Quantum++ is a modern general-purpose multi-threaded quantum computing library written in C++11 and composed solely of header files. The library is not restricted to qubit systems or specific quantum information processing tasks, being capable of simulating arbitrary quantum processes. The main design factors taken in consideration were the ease of use, portability, and performance. The library's simulation capabilities are only restricted by the amount of available physical memory. On a typical machine (Intel i5 8Gb RAM) Quantum++ can successfully simulate the evolution of 25 qubits in a pure state or of 12 qubits in a mixed state reasonably fast. The library also includes support for classical reversible logic, being able to simulate classical reversible operations on billions of bits. This latter feature may be useful in testing quantum circuits composed solely of Toffoli gates, such as certain arithmetic circuits.},
+  keywords  = {quantum computing, libraries, logic circuits, open source software},
   bibsource = qplbib
 }
 
@@ -1576,7 +1596,8 @@
   archiveprefix = {arXiv},
   eprint        = {2204.07112},
   url           = {https://github.com/inQWIRE/SQIR/tree/main/examples/shor},
-  abstract      = {Quantum computing technology may soon deliver revolutionary improvements in algorithmic performance, but these are only useful if computed answers are correct. While hardware-level decoherence errors have garnered significant attention, a less recognized obstacle to correctness is that of human programming errors -- ``bugs''. Techniques familiar to most programmers from the classical domain for avoiding, discovering, and diagnosing bugs do not easily transfer, at scale, to the quantum domain because of its unique characteristics. To address this problem, we have been working to adapt formal methods to quantum programming. With such methods, a programmer writes a mathematical specification alongside their program, and semi-automatically proves the program correct with respect to it. The proof's validity is automatically confirmed -- certified -- by a ``proof assistant''. Formal methods have successfully yielded high-assurance classical software artifacts, and the underlying technology has produced certified proofs of major mathematical theorems. As a demonstration of the feasibility of applying formal methods to quantum programming, we present the first formally certified end-to-end implementation of Shor's prime factorization algorithm, developed as part of a novel framework for applying the certified approach to general applications. By leveraging our framework, one can significantly reduce the effects of human errors and obtain a high-assurance implementation of large-scale quantum applications in a principled way.}
+  abstract      = {Quantum computing technology may soon deliver revolutionary improvements in algorithmic performance, but these are only useful if computed answers are correct. While hardware-level decoherence errors have garnered significant attention, a less recognized obstacle to correctness is that of human programming errors -- ``bugs''. Techniques familiar to most programmers from the classical domain for avoiding, discovering, and diagnosing bugs do not easily transfer, at scale, to the quantum domain because of its unique characteristics. To address this problem, we have been working to adapt formal methods to quantum programming. With such methods, a programmer writes a mathematical specification alongside their program, and semi-automatically proves the program correct with respect to it. The proof's validity is automatically confirmed -- certified -- by a ``proof assistant''. Formal methods have successfully yielded high-assurance classical software artifacts, and the underlying technology has produced certified proofs of major mathematical theorems. As a demonstration of the feasibility of applying formal methods to quantum programming, we present the first formally certified end-to-end implementation of Shor's prime factorization algorithm, developed as part of a novel framework for applying the certified approach to general applications. By leveraging our framework, one can significantly reduce the effects of human errors and obtain a high-assurance implementation of large-scale quantum applications in a principled way.},
+  bibsource     = qplbib
 }
 
 @misc{QiskitCommunity2017,
@@ -1980,7 +2001,7 @@
   author        = {Sivarajah, Seyon and Dilkes, Silas and Cowtan, Alexander and Simmons, Will and Edgington, Alec and Duncan, Ross},
   year          = {2020},
   month         = nov,
-  journal       = {Quantum Science and Technology},
+  journal       = qst,
   publisher     = iop,
   volume        = {6},
   number        = {1},
