Add PLoS ONE journal

--- a/bbt.bib
+++ b/bbt.bib
@@ -42,6 +42,7 @@
 @string{np     = "Nature Physics"}
 @string{nrp    = "Nature Reviews Physics"}
 @string{pc     = "Parallel Computing"}
+@string{plos1  = "PLoS ONE"}
 @string{rtac   = "Reprints in Theory and Applications of Categories"}
 @string{scp    = "Science of Computer Programming"}
 @string{tac    = "Theory and Applications of Categories"}
