Add Yan22 on quantum incorrectness logic

--- a/bbt.bib
+++ b/bbt.bib
@@ -2336,6 +2336,24 @@
   bibsource     = qplbib
 }
 
+@article{Yan2022,
+  title     = {On Incorrectness Logic for Quantum Programs},
+  author    = {Yan, Peng and Jiang, Hanru and Yu, Nengkun},
+  year      = {2022},
+  month     = apr,
+  journal   = pacmpl,
+  volume    = {6},
+  number    = {OOPSLA1},
+  eid       = {72},
+  pages     = {72},
+  numpages  = {28},
+  doi       = {10.1145/3527316},
+  abstract  = {Bug-catching is important for developing quantum programs. Motivated by the incorrectness logic for classical programs, we propose an incorrectness logic towards a logical foundation for static bug-catching in quantum programming. The validity of formulas in this logic is dual to that of quantum Hoare logics. We justify the formulation of validity by an intuitive explanation from a reachability point of view and a comparison against several alternative formulations. Compared with existing works focusing on dynamic analysis, our logic provides sound and complete arguments. We further demonstrate the usefulness of the logic by reasoning several examples, including Grover's search, quantum teleportation, and a repeat-until-success program. We also automate the reasoning procedure by a prototyped static analyzer built on top of the logic rules.},
+  keywords  = {quantum programming languages, projective quantum predicates, incorrectness logic},
+  webnote   = {OOPSLA '22},
+  bibsource = qplbib
+}
+
 @incollection{Ying2009,
   title     = {Predicate {{Transformer Semantics}} of {{Quantum Programs}}},
   author    = {Ying, Mingsheng and Duan, Runyao and Feng, Yuan and Ji, Zhengfeng},
@@ -2531,7 +2549,7 @@
   url       = {https://github.com/psg-mit/twist-popl22},
   abstract  = {Quantum programming languages enable developers to implement algorithms for quantum computers that promise computational breakthroughs in classically intractable tasks. Programming quantum computers requires awareness of entanglement, the phenomenon in which measurement outcomes of qubits are correlated. Entanglement can determine the correctness of algorithms and suitability of programming patterns. In this work, we formalize purity as a central tool for automating reasoning about entanglement in quantum programs. A pure expression is one whose evaluation is unaffected by the measurement outcomes of qubits that it does not own, implying freedom from entanglement with any other expression in the computation. We present Twist, the first language that features a type system for sound reasoning about purity. The type system enables the developer to identify pure expressions using type annotations. Twist also features purity assertion operators that state the absence of entanglement in the output of quantum gates. To soundly check these assertions, Twist uses a combination of static analysis and runtime verification. We evaluate Twist's type system and analyses on a benchmark suite of quantum programs in simulation, demonstrating that Twist can express quantum algorithms, catch programming errors in them, and support programs that existing languages disallow, while incurring runtime verification overhead of less than 3.5\%.},
   keywords  = {entanglement, purity, quantum programming, type systems},
-  webnote   = {POPL '22.},
+  webnote   = {POPL '22},
   bibsource = qplbib
 }
 
