Some more bibtex compatibility for closing #6

--- a/biblatex.bib
+++ b/biblatex.bib
@@ -1879,7 +1879,7 @@
 }
 
 @article{Sivarajah2020,
-  title        = {t$|$ket\textrangle: a retargetable compiler for {NISQ} devices},
+  title        = {t$|$ket⟩: a retargetable compiler for {NISQ} devices},
   author       = {Sivarajah, Seyon and Dilkes, Silas and Cowtan, Alexander and Simmons, Will and Edgington, Alec and Duncan, Ross},
   date         = {2020-11},
   journaltitle = qst,
@@ -1891,7 +1891,7 @@
   eprinttype   = {arXiv},
   eprint       = {2003.10611},
   url          = {https://github.com/CQCL/pytket},
-  abstract     = {We present t$|$ket\textrangle, a quantum software development platform produced by Cambridge Quantum Computing Ltd. The heart of t$|$ket\textrangle is a language-agnostic optimising compiler designed to generate code for a variety of NISQ devices, which has several features designed to minimise the influence of device error. The compiler has been extensively benchmarked and outperforms most competitors in terms of circuit optimisation and qubit routing.},
+  abstract     = {We present t$|$ket⟩, a quantum software development platform produced by Cambridge Quantum Computing Ltd. The heart of t$|$ket⟩ is a language-agnostic optimising compiler designed to generate code for a variety of NISQ devices, which has several features designed to minimise the influence of device error. The compiler has been extensively benchmarked and outperforms most competitors in terms of circuit optimisation and qubit routing.},
   bibsource    = qplbib
 }
 
@@ -2133,12 +2133,12 @@
 }
 
 @misc{Wecker2014,
-  title      = {\textup{LIQ$Ui|$\textrangle{}}: {{A Software Design Architecture}} and {{Domain}}-{{Specific Language}} for {{Quantum Computing}}},
+  title      = {\textup{LIQ$Ui|$⟩}: {{A Software Design Architecture}} and {{Domain}}-{{Specific Language}} for {{Quantum Computing}}},
   author     = {Wecker, Dave and Svore, Krysta M.},
   date       = {2014-02},
   eprinttype = {arXiv},
   eprint     = {1402.4467},
-  abstract   = {Languages, compilers, and computer-aided design tools will be essential for scalable quantum computing, which promises an exponential leap in our ability to execute complex tasks. \textup{LIQ$Ui|$\textrangle{}} is a modular software architecture designed to control quantum hardware. It enables easy programming, compilation, and simulation of quantum algorithms and circuits, and is independent of a specific quantum architecture. \textup{LIQ$Ui|$\textrangle{}} contains an embedded, domain-specific language designed for programming quantum algorithms, with F\# as the host language. It also allows the extraction of a circuit data structure that can be used for optimization, rendering, or translation. The circuit can also be exported to external hardware and software environments. Two different simulation environments are available to the user which allow a trade-off between number of qubits and class of operations. \textup{LIQ$Ui|$\textrangle{}} has been implemented on a wide range of runtimes as back-ends with a single user front-end. We describe the significant components of the design architecture and how to express any given quantum algorithm.},
+  abstract   = {Languages, compilers, and computer-aided design tools will be essential for scalable quantum computing, which promises an exponential leap in our ability to execute complex tasks. \textup{LIQ$Ui|$⟩} is a modular software architecture designed to control quantum hardware. It enables easy programming, compilation, and simulation of quantum algorithms and circuits, and is independent of a specific quantum architecture. \textup{LIQ$Ui|$⟩} contains an embedded, domain-specific language designed for programming quantum algorithms, with F\# as the host language. It also allows the extraction of a circuit data structure that can be used for optimization, rendering, or translation. The circuit can also be exported to external hardware and software environments. Two different simulation environments are available to the user which allow a trade-off between number of qubits and class of operations. \textup{LIQ$Ui|$⟩} has been implemented on a wide range of runtimes as back-ends with a single user front-end. We describe the significant components of the design architecture and how to express any given quantum algorithm.},
   webnote    = {Pronounced ``Liquid''},
   bibsource  = qplbib
 }
