--- a/bbt.bib
+++ b/bbt.bib
@@ -1945,6 +1945,23 @@
   bibsource = qplbib
 }
 
+@article{Selinger2007,
+  title     = {Dagger Compact Closed Categories and Completely Positive Maps (Extended Abstract)},
+  author    = {Selinger, Peter},
+  year      = {2007},
+  month     = mar,
+  journal   = entcs,
+  volume    = {170},
+  pages     = {139--163},
+  doi       = {j.entcs.2006.12.018},
+  url       = {https://www.mscs.dal.ca/~selinger/papers/dagger.pdf},
+  abstract  = {Dagger compact closed categories were recently introduced by Abramsky and Coecke, under the name ``strongly compact closed categories'', as an axiomatic framework for quantum mechanics. We present a graphical language for dagger compact closed categories, and sketch a proof of its completeness for equational reasoning. We give a general construction, the CPM construction, which associates to each dagger compact closed category its ``category of completely positive maps'', and we show that the resulting category is again dagger compact closed. We apply these ideas to Abramsky and Coecke's interpretation of quantum protocols, and to D'Hondt and Panangaden's predicate transformer semantics.},
+  keywords  = {Categorical model, quantum computing, dagger categories, CPM construction},
+  note      = {Proceedings of the 3rd International Workshop on Quantum Programming Languages (QPL 2005)},
+  webnote   = {QPL 2005},
+  bibsource = qplbib
+}
+
 @incollection{Selinger2009,
   title     = {Quantum {{Lambda Calculus}}},
   author    = {Selinger, Peter and Valiron, Beno{\^i}t},
