--- a/biblatex.bib
+++ b/biblatex.bib
@@ -983,6 +983,23 @@
   bibsource = qplbib
 }
 
+@inproceedings{Huot2019a,
+  title      = {Quantum channels as a categorical completion},
+  author     = {Huot, Mathieu and Staton, Sam},
+  date       = {2019-06},
+  booktitle  = {Proceedings of the 34th {{Annual ACM}}/{{IEEE Symposium}} on {{Logic}} in {{Computer Science}}},
+  publisher  = ieee,
+  location   = {Los Alamitos, CA, USA},
+  series     = {{{LICS}} '19},
+  eid        = {35},
+  doi        = {10.1109/LICS.2019.8785700},
+  eprinttype = {arXiv},
+  eprint     = {1904.09600},
+  abstract   = {We propose a categorical foundation for the connection between pure and mixed states in quantum information and quantum computation. The foundation is based on distributive monoidal categories. First, we prove that the category of all quantum channels is a canonical completion of the category of pure quantum operations (with ancilla preparations). More precisely, we prove that the category of completely positive trace-preserving maps between finite-dimensional C*-algebras is a canonical completion of the category of finite-dimensional vector spaces and isometries. Second, we extend our result to give a foundation to the topological relationships between quantum channels. We do this by generalizing our categorical foundation to the topologically-enriched setting. In particular, we show that the operator norm topology on quantum channels is the canonical topology induced by the norm topology on isometries.},
+  keywords   = {category theory, mathematical operators, quantum computing, quantum theory, topology, vectors},
+  bibsource  = qplbib
+}
+
 @article{Ittah2022,
   title        = {QIRO: A Static Single Assignment-Based Quantum Program Representation for Optimization},
   author       = {Ittah, David and H{\"a}ner, Thomas and Kliuchnikov, Vadym and Hoefler, Torsten},
@@ -2042,7 +2059,7 @@
   publisher  = ieee,
   location   = {Los Alamitos, CA, USA},
   series     = {{{LICS}} '19},
-  pages      = {1--13},
+  eid        = {47},
   doi        = {10.1109/LICS.2019.8785779},
   eprinttype = {arXiv},
   eprint     = {1902.00325},
