Add extended version for Unruh's QRHL

--- a/bbt.bib
+++ b/bbt.bib
@@ -402,7 +402,7 @@
   eprint        = {2003.05841},
   abstract      = {While recent progress in quantum hardware open the door for significant speedup in certain key areas, quantum algorithms are still hard to implement right, and the validation of such quantum programs is a challenge. In this paper we propose Qbricks, a formal verification environment for circuit-building quantum programs, featuring both parametric specifications and a high degree of proof automation. We propose a logical framework based on first-order logic, and develop the main tool we rely upon for achieving the automation of proofs of quantum specification: PPS, a parametric extension of the recently developed path sum semantics. To back-up our claims, we implement and verify parametric versions of several famous and non-trivial quantum algorithms, including the quantum parts of Shor's integer factoring, quantum phase estimation (QPE) and Grover's search.},
   keywords      = {deductive verification, quantum programming, quantum circuits},
-  webnote       = {See extended version for additional technical material.},
+  webnote       = {See extended version on arXiv for additional technical material.},
   bibsource     = qplbib
 }
 
@@ -2199,21 +2199,23 @@
 }
 
 @article{Unruh2019,
-  title     = {Quantum Relational {{Hoare}} Logic},
-  author    = {Unruh, Dominique},
-  year      = {2019},
-  month     = jan,
-  journal   = pacmpl,
-  volume    = {3},
-  number    = {POPL},
-  eid       = {33},
-  pages     = {33},
-  numpages  = {31},
-  doi       = {10.1145/3290346},
-  abstract  = {We present a logic for reasoning about pairs of interactive quantum programs -- quantum relational Hoare logic (qRHL). This logic follows the spirit of probabilistic relational Hoare logic (Barthe et al. 2009) and allows us to formulate how the outputs of two quantum programs relate given the relationship of their inputs. Probabilistic RHL was used extensively for computer-verified security proofs of classical cryptographic protocols. Since pRHL is not suitable for analyzing quantum cryptography, we present qRHL as a replacement, suitable for the security analysis of post-quantum cryptography and quantum protocols. The design of qRHL poses some challenges unique to the quantum setting, e.g., the definition of equality on quantum registers. Finally, we implemented a tool for verifying proofs in qRHL and developed several example security proofs in it.},
-  keywords  = {formal verification, quantum cryptography, hoare logic},
-  webnote   = {POPL '19},
-  bibsource = qplbib
+  title         = {Quantum Relational {{Hoare}} Logic},
+  author        = {Unruh, Dominique},
+  year          = {2019},
+  month         = jan,
+  journal       = pacmpl,
+  volume        = {3},
+  number        = {POPL},
+  eid           = {33},
+  pages         = {33},
+  numpages      = {31},
+  doi           = {10.1145/3290346},
+  archiveprefix = {arXiv},
+  eprint        = {1802.03188},
+  abstract      = {We present a logic for reasoning about pairs of interactive quantum programs -- quantum relational Hoare logic (qRHL). This logic follows the spirit of probabilistic relational Hoare logic (Barthe et al. 2009) and allows us to formulate how the outputs of two quantum programs relate given the relationship of their inputs. Probabilistic RHL was used extensively for computer-verified security proofs of classical cryptographic protocols. Since pRHL is not suitable for analyzing quantum cryptography, we present qRHL as a replacement, suitable for the security analysis of post-quantum cryptography and quantum protocols. The design of qRHL poses some challenges unique to the quantum setting, e.g., the definition of equality on quantum registers. Finally, we implemented a tool for verifying proofs in qRHL and developed several example security proofs in it.},
+  keywords      = {formal verification, quantum cryptography, hoare logic},
+  webnote       = {POPL '19. See extended version on arXiv.},
+  bibsource     = qplbib
 }
 
 @inproceedings{Unruh2019a,
