--- a/bbt.bib
+++ b/bbt.bib
@@ -2058,6 +2058,19 @@
   bibsource = qplbib
 }
 
+@inproceedings{Singhal2022,
+  title     = {{Q\# as a Quantum Algorithmic Language}},
+  author    = {Singhal, Kartik and Hietala, Kesha and Marshall, Sarah and Rand, Robert},
+  year      = {2022},
+  month     = jun,
+  booktitle = {Proceedings of the 19th International Conference on Quantum Physics and Logic (QPL), Oxford, U.K., June 27--July 1, 2022},
+  url       = {https://ks.cs.uchicago.edu/publication/q-algol/},
+  abstract  = {Q\# is a standalone domain-specific programming language from Microsoft for writing and running quantum programs. Like most industrial languages, it was designed without a formal specification, which can naturally lead to ambiguity in its interpretation. We aim to provide a formal language definition for Q\#, placing the language on a solid mathematical foundation and enabling further evolution of its design and type system. This paper presents λ-Q\#, an idealized version of Q\# that illustrates how we may view Q\# as a quantum Algol (algorithmic language). We show the safety properties enforced by λ-Q\#'s type system and present its equational semantics based on a fully complete algebraic theory by Staton.},
+  keywords  = {quantum computing, quantum computation, programming languages, formal specification, formal language definitions, type systems, semantics and reasoning, quantum programming languages, language design, q\#},
+  note      = {To appear},
+  bibsource = qplbib
+}
+
 @article{Sivarajah2020,
   title         = {t$|$ket$\rangle$: a retargetable compiler for {NISQ} devices},
   author        = {Sivarajah, Seyon and Dilkes, Silas and Cowtan, Alexander and Simmons, Will and Edgington, Alec and Duncan, Ross},
@@ -2555,6 +2568,17 @@
   keywords  = {quantum programming, quantum hoare logic, parallel programs, entanglement, hoare logic},
   webnote   = {Essentially the first part of \cite{Ying2018}},
   bibsource = qplbib
+}
+
+@misc{Ying2022,
+  title         = {{Birkhoff-von Neumann Quantum Logic as an Assertion Language for Quantum Programs}},
+  author        = {Ying, Mingsheng},
+  year          = {2022},
+  month         = may,
+  archiveprefix = {arXiv},
+  eprint        = {2205.01959},
+  abstract      = {A first-order logic with quantum variables is needed as an assertion language for specifying and reasoning about various properties (e.g. correctness) of quantum programs. Surprisingly, such a logic is missing in the literature, and the existing first-order Birkhoff-von Neumann quantum logic deals with only classical variables and quantifications over them. In this paper, we fill in this gap by introducing a first-order extension of Birkhoff-von Neumann quantum logic with universal and existential quantifiers over quantum variables. Examples are presented to show our logic is particularly suitable for specifying some important properties studied in quantum computation and quantum information. We further incorporate this logic into quantum Hoare logic as an assertion logic so that it can play a role similar to that of first-order logic for classical Hoare logic and BI-logic for separation logic. In particular, we show how it can be used to define and derive quantum generalisations of some adaptation rules that have been applied to significantly simplify verification of classical programs. It is expected that the assertion logic defined in this paper - first-order quantum logic with quantum variables - can be combined with various quantum program logics to serve as a solid logical foundation upon which verification tools can be built using proof assistants such as Coq and Isabelle/HOL.},
+  bibsource     = qplbib
 }
 
 @inproceedings{Yu2021,
