--- a/biblatex.bib
+++ b/biblatex.bib
@@ -1911,15 +1911,17 @@
 }
 
 @inproceedings{Singhal2022,
-  title     = {{Q\# as a Quantum Algorithmic Language}},
-  author    = {Singhal, Kartik and Hietala, Kesha and Marshall, Sarah and Rand, Robert},
-  date      = {2022-06},
-  booktitle = {Proceedings of the 19th International Conference on Quantum Physics and Logic (QPL), Oxford, U.K., June 27--July 1, 2022},
-  url       = {https://ks.cs.uchicago.edu/publication/q-algol/},
-  abstract  = {Q\# is a standalone domain-specific programming language from Microsoft for writing and running quantum programs. Like most industrial languages, it was designed without a formal specification, which can naturally lead to ambiguity in its interpretation. We aim to provide a formal language definition for Q\#, placing the language on a solid mathematical foundation and enabling further evolution of its design and type system. This paper presents λ-Q\#, an idealized version of Q\# that illustrates how we may view Q\# as a quantum Algol (algorithmic language). We show the safety properties enforced by λ-Q\#'s type system and present its equational semantics based on a fully complete algebraic theory by Staton.},
-  keywords  = {Quantum Computing, Quantum Computation, Programming Languages, Formal Specification, Formal language definitions, Type Systems, Semantics and reasoning, Quantum Programming Languages, Language Design, Q\#},
-  note      = {To appear},
-  bibsource = qplbib
+  title      = {{Q\# as a Quantum Algorithmic Language}},
+  author     = {Singhal, Kartik and Hietala, Kesha and Marshall, Sarah and Rand, Robert},
+  date       = {2022-06},
+  booktitle  = {Proceedings of the 19th International Conference on Quantum Physics and Logic (QPL), Oxford, U.K., June 27--July 1, 2022},
+  eprinttype = {arXiv},
+  eprint     = {2206.03532},
+  url        = {https://ks.cs.uchicago.edu/publication/q-algol/},
+  abstract   = {Q\# is a standalone domain-specific programming language from Microsoft for writing and running quantum programs. Like most industrial languages, it was designed without a formal specification, which can naturally lead to ambiguity in its interpretation. We aim to provide a formal language definition for Q\#, placing the language on a solid mathematical foundation and enabling further evolution of its design and type system. This paper presents λ-Q\#, an idealized version of Q\# that illustrates how we may view Q\# as a quantum Algol (algorithmic language). We show the safety properties enforced by λ-Q\#'s type system and present its equational semantics based on a fully complete algebraic theory by Staton.},
+  keywords   = {Quantum Computing, Quantum Computation, Programming Languages, Formal Specification, Formal language definitions, Type Systems, Semantics and reasoning, Quantum Programming Languages, Language Design, Q\#},
+  note       = {To appear},
+  bibsource  = qplbib
 }
 
 @article{Sivarajah2020,
